fix(options panel styles) makes background not transparent so waves wouldn't overlap

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,11 +4,11 @@ $primary: hsl(9, 75%, 72%);
 $secondary: #3b5e76;
 $neutral: #f3f3f3;
 
-$bg: linear-gradient(165deg, saturate(lighten($secondary, 5), 15) 0%, darken($secondary, 20) 100%);
+$bg: linear-gradient(165deg, saturate(darken($secondary, 5), 15) 0%, darken($secondary, 20) 100%);
 $bg-backlit-shadow-bright: red;
 $bg-backlit-bright: rgb(230, 0, 0);
 $bg-backlit-dim: rgb(122, 0, 0);
-$bg-options-panel: linear-gradient(180deg, rgba(0, 0, 0, 0.3) 20%, rgba(0, 0, 0, 0.1) 100%);
+$bg-options-panel: linear-gradient(180deg, darken($secondary, 15) 5%, $secondary 25%, darken($secondary, 10) 100%);
 $case-body-background: darken($secondary, 20);
 $case-width: 0.75rem;
 $case-shadow: 0 1.5rem 2rem 0rem #172635;
